--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <li class="list-item-bum">
               <div class="svg-container">
                 <svg class="bum-icon" width="64" height="64">
-                  <use href="./images/icons.svg#icon-antenna"></use>
+                  <use href="./imeges/svg/icons.svg"></use>
                 </svg>
               </div>
               <h3 class="bum_title">Strategy</h3>
@@ -88,7 +88,7 @@
             <li class="list-item-bum">
               <div class="svg-container">
                 <svg class="bum-logo-items" width="64" height="64">
-                  <use href="./images/icons.svg#icon-clock"></use>
+                  <use href="./imeges/svg/icons.svg"></use>
                 </svg>
               </div>
               <h3 class="bum_title">Punctuality</h3>
@@ -100,7 +100,7 @@
             <li class="list-item-bum">
               <div class="svg-container">
                 <svg class="bum-logo-items" width="64" height="64">
-                  <use href="./images/icons.svg#icon-diagram"></use>
+                  <use href="./imeges/svg/icons.svg"></use>
                 </svg>
               </div>
               <h3 class="bum_title">Diligence</h3>
@@ -112,7 +112,7 @@
             <li class="list-item-bum">
               <div class="svg-container">
                 <svg class="bum-logo-items" width="64" height="64">
-                  <use href="./images/icons.svg#icon-astronaut"></use>
+                  <use href="./imeges/svg/icons.svg"></use>
                 </svg>
               </div>
               <h3 class="bum_title">Technologies</h3>
